tests/pass/0047_short_circuit_and.ee
fn main() {
    debugPrint(false && (1 / 0));
    debugPrint(0 && (1 / 0));
}
