tests/fail/0001_divide_by_zero.ee
fn main() {
    debugPrint(1 / 0);
}
